Update SegmentProgressIndex.java